Updating .gitignore and home.html

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Telco</title>
@@ -61,6 +61,24 @@
       </form>
     </div>
   </div>
+
+  <!-- Buy Service Page -->
+  <div>
+    <h1>Buy Service</h1>
+    <form>
+      <label>Choose your package:</label>
+      <input type="radio">Option1<br>
+      <label>Validity Period</label><br>
+      <!-- List box input -->
+      <label>Do you want some of our products?</label><br>
+      <input type="checkbox">Option1<br>
+      <label>Start Subscription Date</label><br>
+      <input type="date"><br>
+      <input type="submit" value="Confirm">
+    </form>
+  </div>
+
+  <!-- Confirmation Page -->
 
 </body>
 </html>
