Fixing select and option tag

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -152,12 +152,12 @@
         <label>Package selected:</label><br>
         <!-- Package -->
         <label>Validity Period:</label><br>
-        <div class="selectValidityPeriod">
-          <select>
-            <option>Select Validity Period:</option>
-            <option>Option 1</option>
-            <option>Option 2</option>
-            <option>Option 3</option>
+        <div class="validityPeriod">
+          <select class="validityPeriod">
+            <option class="validityPeriod" selected>Select Validity Period:</option>
+            <option class="validityPeriod">Option 1</option>
+            <option class="validityPeriod">Option 2</option>
+            <option class="validityPeriod">Option 3</option>
           </select>
         </div>
         <label>Do you want some of our products?</label><br>
