--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -78,14 +78,14 @@
         <form>
 
           <label>Username</label><br>
-          <label><input type="text" placeholder="Username"></label>
+          <label><input type="text" name="username" placeholder="Username"></label>
           <p class="errormessage" id="errorUsernameLogin">&times; Username not valid</p>
 
           <label>Password</label><br>
-          <label><input type="password" placeholder="Password"></label>
+          <label><input type="password" name="password" placeholder="Password"></label>
           <p class="errormessage" id="errorPasswordLogin">&times; Password incorrect</p>
 
-          <input class="signInButton" type="submit" value="Sign In">
+          <input id="signInButton" class="signInButton" type="submit" value="Sign In">
 
         </form>
 
@@ -116,17 +116,17 @@
         <form>
 
           <label>Username</label><br>
-          <label><input type="text" placeholder="Username"></label>
+          <label><input type="text" name="username" placeholder="Username"></label>
           <p class="errormessage" id="errorUsernameSignUp">&times; Username already used</p>
 
           <label>Email</label><br>
-          <label><input type="email" placeholder="Email"></label>
+          <label><input type="email" name="email" placeholder="Email"></label>
           <p class="errormessage" id="errorEmailSignUp">&times; Email already used</p>
 
           <label>Password</label><br>
-          <label><input type="password" placeholder="Password"></label><br><br>
+          <label><input type="password" name="password" placeholder="Password"></label><br><br>
           <label>Confirm Password</label><br>
-          <label><input type="password" placeholder="Confirm Again"></label>
+          <label><input type="password" name="confirmPassword" placeholder="Confirm Again"></label>
           <p class="errormessage" id="errorPasswordSignUp">&times; Passwords don't match</p>
 
           <input class="signUpButton" type="submit" value="Sign Up">
